--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
 
     <header>
-        <h1>Install EXPO GO  Android App into your iPhone</h1>
+        <h1>Install EXPO GO App into your iPhone</h1>
         <h5>This QR only for iPhone devices</h5>
         <p>Scan this QR code</p>
     </header>
